deploy/prod/02_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: verifier
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - verifier.prod.plugins.vultisig.com
      secretName: verifier-tls
  rules:
    - host: verifier.prod.plugins.vultisig.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: verifier
                port:
                  number: 80
